@@ -4,8 +4,8 @@
 <menu name="FileMenu" action="File">
  	<menuitem action="NewTopic"/>
 	<separator/>
-        <menuitem action="OpenInWindow"/>
 	<menuitem action="OpenInTab"/>
+        <menuitem action="OpenInWindow"/>
 	<separator/>
 	<menuitem action="Rename"/>
 	<menuitem action="Delete"/>
@@ -39,8 +39,8 @@
 </menubar>
 
 <popup name="EphyBookmarkEditorPopup" action="PopupAction">
-	<menuitem action="OpenInWindow"/>
 	<menuitem action="OpenInTab"/>
+	<menuitem action="OpenInWindow"/>
 	<separator/>
 	<menuitem action="Copy"/>
 	<separator/>
