@@ -2,8 +2,8 @@
 <menubar>
 
 <menu name="FileMenu" action="File">
-        <menuitem name="FileOpenInWindow" action="OpenInWindow"/>
 	<menuitem name="FileOpenInTab" action="OpenInTab"/>
+        <menuitem name="FileOpenInWindow" action="OpenInWindow"/>
 	<separator name="FileSep1"/>
 	<menuitem name="FileBookmarkLink" action="BookmarkLink"/>
 	<menuitem name="FileDelete" action="Delete"/>
@@ -34,8 +34,8 @@
 </menubar>
 
 <popup name="EphyHistoryWindowPopup" action="PopupAction">
-	<menuitem name="OpenInWindowHST" action="OpenInWindow"/>
 	<menuitem name="OpenInTabHST" action="OpenInTab"/>
+	<menuitem name="OpenInWindowHST" action="OpenInWindow"/>
 	<separator name="HistoryPopupSep1"/>
 	<menuitem name="CopyHST" action="Copy"/>
 	<separator name="HistoryPopupSep2"/>
