@@ -1,8 +1,8 @@
 <ui>
 <menubar>
 <menu name="FileMenu" action="File">  
-        <menuitem name="FileNewWindowMenu" action="FileNewWindow"/>
 	<menuitem name="FileNewTabMenu" action="FileNewTab"/>
+        <menuitem name="FileNewWindowMenu" action="FileNewWindow"/>
 	<menuitem name="FileOpenMenu" action="FileOpen"/>
 	<separator name="FileSep1"/>	
         <menuitem name="FileSaveAsMenu" action="FileSaveAs"/>
@@ -136,8 +136,8 @@
 
 <popup name="EphyLinkPopup" action="PopupAction">
 	<menuitem name="OpenLinkLP" action="OpenLink"/>
-        <menuitem name="OpenLinkInNewWindowLP" action="OpenLinkInNewWindow"/>
 	<menuitem name="OpenLinkInNewTabLP" action="OpenLinkInNewTab"/>
+        <menuitem name="OpenLinkInNewWindowLP" action="OpenLinkInNewWindow"/>
 	<separator name="LPSep1"/>
 	<menuitem name="EditCopyLP" action="EditCopy"/>
 	<separator name="LPSep2"/>
