@@ -1,3 +1,12 @@
+2006-04-11  Crispin Flowerday  <gnome@flowerday.cx>
+
+	* data/ui/epiphany-bookmark-editor-ui.xml:
+	* data/ui/epiphany-history-window-ui.xml:
+	* data/ui/epiphany-ui.xml:
+
+	Reorder the menu items everywhere to have new tab above 
+	new window. Fixes bug #303417
+
 2006-04-10  Paul Drain <pd@cipherfunk.org>
 
 	* data/art/Makefile.am:
